fixes height issues on mobile by adding height auto and min-height 100% to en/decrypt sections; adjusts markup in encrytp to be like that in decrypt.

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,8 @@ nav {
 
 
 .encryption, .decryption {
-	height: 100%;
+	min-height: 100%;
+	height:auto; /* to accomodate height of child elements */
 	padding-top: 3rem; /* due to clipping on link click */
 }
 .encryption {
